EMS: Applied changes from main repo
Change-Id: I91c7cd475c0a1139f73ff76b71b90ab3aae1445b